Upgrade Gradle, dependencies